feat:优化双均线策略